--- a/components/circle/create/create_circle_content.module.scss
+++ b/components/circle/create/create_circle_content.module.scss
@@ -35,7 +35,7 @@
         width: 100%;
         border-radius: 10px;
         padding: 40px 30px 150px;
-        background-image: url("../../../public/static/images/follow_bg.png");
+        background-image: url("#{$static}/images/follow_bg.png");
         background-repeat: no-repeat;
         background-position: center bottom;
         background-size: 100% auto;
@@ -120,7 +120,7 @@
                 border-radius: 10px;
                 outline: 1px dashed #ccc;
                 overflow: hidden;
-                background-image: url("/static/images/upload_circle_bg.png");
+                background-image: url("#{$static}/images/upload_circle_bg.png");
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: 200px 100px;
