--- a/components/mine/center/follow_fan/follow_fans.module.scss
+++ b/components/mine/center/follow_fan/follow_fans.module.scss
@@ -8,7 +8,7 @@
     border-radius: 10px;
     text-align: center;
     align-items: center;
-    background-image: url("../../../../public/static/images/follow_bg.png");
+    background-image: url("#{$static}/images/follow_bg.png");
     background-repeat: no-repeat;
     background-position: center bottom;
 
